不再支持重混淆